--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,4 +9,4 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 # dockerの設定
 [program:docker]
-command=service docker start
+command=systemctl start docker
